--- a/app/src/main/res/layout/fragment_contar_alimentos.xml
+++ b/app/src/main/res/layout/fragment_contar_alimentos.xml
@@ -49,7 +49,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="17dp"
                 android:layout_marginTop="15dp"
-                android:text="¿Cuantos polos tiene Nicolas?"
+                android:text="¿Cuantos alimentos enlatados hay?"
                 />
 
 
@@ -96,13 +96,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center">
+
                     <TextView
                         android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:textColor="@color/black"
+                        android:layout_height="29dp"
                         android:background="@drawable/mostaza"
                         android:text=""
-                        android:textSize="30dp"/>
+                        android:textColor="@color/black"
+                        android:textSize="30dp" />
 
                 </RelativeLayout>
 
@@ -356,7 +357,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="¿Cuantos alimentos enlatados hay?"
+                        android:text="Marca la respuesta correcta"
                         android:textColor="@color/black"
                         android:textSize="17dp" />
 
