--- a/app/src/main/res/layout/fragment_encontrar.xml
+++ b/app/src/main/res/layout/fragment_encontrar.xml
@@ -545,17 +545,7 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center">
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:background="@color/black"
-                        android:layout_height="150dp"
-                        android:textColor="@color/white"
-                        android:text="Puedes intentar resolver aquí:"
-                        android:padding="10dp"
-                        android:textSize="18dp"/>
-
-                </RelativeLayout>
+                    android:gravity="center"/>
 
 
             </LinearLayout>
