--- a/app/src/main/res/layout/fragment_estimacion.xml
+++ b/app/src/main/res/layout/fragment_estimacion.xml
@@ -86,7 +86,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="¿Yo estimo que hay?"
+                        android:text="Yo estimo que hay..."
                         android:textColor="@color/black"
                         android:textSize="17dp" />
 
