--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,61 +4,82 @@
     tools:showIn="navigation_view">
 
     <group android:checkableBehavior="single">
-        <item
-            android:id="@+id/nav_home"
-            android:title="@string/menu_home" />
-        <item
-            android:id="@+id/nav_gallery"
-            android:title="@string/menu_gallery" />
+        <item android:title="Módulo 1 : Aprendiendo números">
+            <menu >
+                <item
+                    android:id="@+id/nav_enlatados_colores"
+                    android:title="Contar comida enlatada" />
+                <item
+                    android:id="@+id/nav_contar_color"
+                    android:title="Contar colores" />
+                <item
+                    android:id="@+id/nav_home"
+                    android:title="Encontrando Números" />
+                <item
+                    android:id="@+id/nav_decenas"
+                    android:title="Decenas y unidades I" />
+                <item
+                    android:id="@+id/nav_decenas_hard"
+                    android:title="Decenas y unidades I" />
+            </menu>
+        </item>
 
-        <item
-            android:id="@+id/nav_contar_color"
-            android:title="Contar colores" />
+        <item android:title="Módulo 2 : Sumar">
+            <menu>
+                <item
+                    android:id="@+id/nav_slideshow"
+                    android:title="Sumar con llevadas" />
 
-        <item
-            android:id="@+id/nav_enlatados_colores"
-            android:title="Contar comida enlatada" />
+            </menu>
+        </item>
 
-        <item
-            android:id="@+id/LongitudLapizFragment"
-            android:title="Logitud lápiz" />
+        <item android:title="Módulo 2 : Restas">
+            <menu>
+                <item
+                    android:id="@+id/nav_resta"
+                    android:title="Restas con llevadas" />
 
-        <item
-            android:id="@+id/nav_animales"
-            android:title="Medida animal" />
+            </menu>
+        </item>
+
+        <item android:title="Módulo 2 : Longitud">
+            <menu>
+                <item
+                    android:id="@+id/LongitudLapizFragment"
+                    android:title="Test de Longitud I" />
+
+                <item
+                    android:id="@+id/nav_paleta"
+                    android:title="Test de Longitud II" />
+            </menu>
+        </item>
+
+        <item android:title="Módulo 2 : Peso">
+            <menu>
+                <item
+                    android:id="@+id/nav_peso"
+                    android:title="Test de peso" />
+
+                <item
+                    android:id="@+id/nav_animales"
+                    android:title="Medida animal" />
+                <item
+                    android:id="@+id/nav_estimacion"
+                    android:title="Test de estimación" />
+            </menu>
+        </item>
+
+        <item android:title="Módulo 3 : Comparadores">
+            <menu>
+                <item
+                    android:id="@+id/nav_gallery"
+                    android:title="@string/menu_gallery" />
+            </menu>
+        </item>
 
 
-        <item
-            android:id="@+id/nav_estimacion"
-            android:title="Estimación" />
-
-        <item
-            android:id="@+id/nav_paleta"
-            android:title="Medida Paleta" />
-
-        <item
-            android:id="@+id/nav_peso"
-            android:title="Peso" />
 
 
-        <item
-            android:id="@+id/nav_decenas"
-            android:title="Decenas" />
-
-
-        <item
-            android:id="@+id/nav_decenas_hard"
-            android:title="Decenas segundo nivel" />
-
-
-
-        <item
-            android:id="@+id/nav_slideshow"
-            android:title="Sumar" />
-
-        <item
-            android:id="@+id/nav_resta"
-            android:title="Resta" />
 
     </group>
 
