--- a/app/src/main/res/layout/fragment_decenas_hard.xml
+++ b/app/src/main/res/layout/fragment_decenas_hard.xml
@@ -43,7 +43,7 @@
 
 
             <TextView
-                android:id="@+id/encuentra_numero_text"
+                android:id="@+id/pregunta"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="17dp"
