--- a/app/src/main/res/layout/resta.xml
+++ b/app/src/main/res/layout/resta.xml
@@ -46,7 +46,7 @@
 
 
             <TextView
-                android:id="@+id/encuentra_numero_text"
+                android:id="@+id/pregunta"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="17dp"
