--- a/app/src/main/res/layout/fragment_modulo_i.xml
+++ b/app/src/main/res/layout/fragment_modulo_i.xml
@@ -80,6 +80,7 @@
             />
 
         <TextView
+            android:id="@+id/iniciar_i"
             android:layout_marginTop="15dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
