--- a/app/src/main/res/layout/fragment_modulo_i_v.xml
+++ b/app/src/main/res/layout/fragment_modulo_i_v.xml
@@ -56,6 +56,7 @@
             />
 
         <TextView
+            android:id="@+id/iniciar"
             android:layout_marginTop="15dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
