--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -165,7 +165,23 @@
         android:label="App Matematicas"
         tools:layout="@layout/fragment_estrategia" />
 
+    <fragment
+        android:id="@+id/nav_comparacion"
+        android:name="com.daniel.appmatematicas.view.fragmentos.ComparacionesFragment"
+        android:label="App Matematicas"
+        tools:layout="@layout/fragment_comparaciones" />
 
+    <fragment
+        android:id="@+id/nav_calculadoraI"
+        android:name="com.daniel.appmatematicas.view.fragmentos.CalcularIFragment"
+        android:label="App Matematicas"
+        tools:layout="@layout/fragment_calcular_i" />
+
+    <fragment
+        android:id="@+id/nav_calculadorII"
+        android:name="com.daniel.appmatematicas.view.fragmentos.CalculadoraIIFragment"
+        android:label="App Matematicas"
+        tools:layout="@layout/fragment_calculadora_i_i" />
 
 
 </navigation>
