--- a/app/src/main/res/layout/fragment_longitud_lapiz.xml
+++ b/app/src/main/res/layout/fragment_longitud_lapiz.xml
@@ -5,7 +5,11 @@
     android:layout_height="match_parent"
     tools:context=".view.fragmentos.LongitudLapizFragment">
 
-
+    <ImageView
+        android:id="@+id/cerrar"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:background="@drawable/com_facebook_close"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
