--- a/app/src/main/res/layout/fragment_modulo_i.xml
+++ b/app/src/main/res/layout/fragment_modulo_i.xml
@@ -102,6 +102,7 @@
 
         <!-- TODO: Update blank fragment layout -->
         <TextView
+            android:id="@+id/salir"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="30dp"
