--- a/app/src/main/res/layout/fragment_modulo_i_i.xml
+++ b/app/src/main/res/layout/fragment_modulo_i_i.xml
@@ -117,8 +117,8 @@
             android:text="■" />
 
 
-        <!-- TODO: Update blank fragment layout -->
         <TextView
+            android:id="@+id/salir"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="30dp"
