--- a/app/src/main/res/layout/fragment_modulo_i_i_i.xml
+++ b/app/src/main/res/layout/fragment_modulo_i_i_i.xml
@@ -78,6 +78,7 @@
 
         <!-- TODO: Update blank fragment layout -->
         <TextView
+            android:id="@+id/salir"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="30dp"
