--- a/app/src/main/res/layout/fragment_calculadora_i_i.xml
+++ b/app/src/main/res/layout/fragment_calculadora_i_i.xml
@@ -67,14 +67,56 @@
                 android:text="¿Con cuántas manzanas se quedó Valentina?"
                 />
 
-
-
-            <ImageView
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="500dp"
-                android:background="@drawable/calculadora"
-                />
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:weightSum="7"
+                >
 
+                <EditText
+                    android:layout_weight="1"
+                    android:text="50"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="30dp"
+                    android:text="-"/>
+                <EditText
+                    android:layout_weight="1"
+                    android:text="30"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    />
+                <TextView
+                    android:layout_weight="1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="30dp"
+                    android:text="+"/>
+                <EditText
+                    android:layout_weight="1"
+                    android:text="10"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    />
+                <TextView
+                    android:layout_weight="1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="30dp"
+                    android:text="="/>
+                <EditText
+                    android:layout_weight="1"
+                    android:id="@+id/primero"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    />
+
+            </LinearLayout>
 
 
         </LinearLayout>
