--- a/app/src/main/res/layout/fragment_comparaciones.xml
+++ b/app/src/main/res/layout/fragment_comparaciones.xml
@@ -143,11 +143,39 @@
 
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
-                android:background="@drawable/modulo_4"
-                />
+                android:layout_height="156dp"
+                android:visibility="gone"
+                android:background="@drawable/modulo_4" />
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:weightSum="3"
+                >
 
+                <EditText
+                    android:layout_weight="1"
+                    android:id="@+id/primero"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    />
+
+                <EditText
+                    android:layout_weight="1"
+                    android:id="@+id/segundo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    />
+
+                <EditText
+                    android:layout_weight="1"
+                    android:id="@+id/tercero"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    />
+
+            </LinearLayout>
 
 
 
