--- a/app/src/main/res/layout/fragment_resultado.xml
+++ b/app/src/main/res/layout/fragment_resultado.xml
@@ -21,6 +21,7 @@
 
 
     <TextView
+        android:id="@+id/resultado"
         android:layout_marginTop="80dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
