--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -73,6 +73,7 @@
 
         <!-- TODO: Update blank fragment layout -->
         <TextView
+            android:id="@+id/modulo5"
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
