--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -190,8 +190,15 @@
         tools:layout="@layout/fragment_resultado" />
 
     <fragment
-        android:id="@+id/nav_resultado1"
+        android:id="@+id/nav_resultado5"
         android:name="com.daniel.appmatematicas.view.resultado.Resultado1Fragment"
+        android:label="@string/app_name"
+        tools:layout="@layout/fragment_resultado" />
+
+
+    <fragment
+        android:id="@+id/nav_resultadoV"
+        android:name="com.daniel.appmatematicas.view.resultado.Resultado5Fragment"
         android:label="@string/app_name"
         tools:layout="@layout/fragment_resultado" />
 
